<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu_category" />
    </group>

    <group>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_markunread_24"
            android:title="@string/menu_news" />
    </group>

    <group>
        <item
            android:id="@+id/nav_best_deal"
            android:icon="@drawable/ic_star_24"
            android:title="@string/menu_best_deal" />
    </group>

    <group>
        <item
            android:id="@+id/nav_most_popular"
            android:icon="@drawable/ic_whatshot_24"
            android:title="@string/menu_most_popular" />
    </group>

    <group>
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order_black_24dp"
            android:title="@string/menu_order" />


    </group>
    <group>
        <item
            android:id="@+id/nav_shipper"
            android:icon="@drawable/ic_shipping_black_24dp"
            android:title="@string/menu_shipper" />
    </group>


    <group >
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_sign_out" />


    </group>


</menu>
