<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_title"
            android:hint="@string/titulo_new_system_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_content"
            android:hint="@string/content_new_system_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imageSend_new_system_dialog"
        android:textSize="25sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/rdi_none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/none_rdi_new_system_dialog"/>

        <RadioButton
            android:id="@+id/rdi_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/link_rdi_new_system_dialog"/>
        <RadioButton
            android:id="@+id/rdi_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_rdi_new_system_dialog"/>

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_link"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:hint="@string/link_edt_new_system_dialog"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/img_upload"
        android:scaleType="centerInside"
        android:visibility="gone"
        android:src="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>


</LinearLayout>