<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingBottom="8dp"
    android:background="@android:color/white"
    android:paddingTop="8dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/placed_filter"
        android:clickable="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:tint="#737373"
            android:src="@drawable/ic_speaker_notes_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/placed"
            android:textColor="#737373"
            android:textSize="16sp"/>

    </LinearLayout>
      <View
       android:layout_width="match_parent"
       android:layout_height="1dip"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:background="@android:color/darker_gray"/>

<LinearLayout
    android:id="@+id/shipping_filter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    android:orientation="horizontal"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginRight="32dp"
        android:tint="#737373"
        android:src="@drawable/ic_local_shipping_black_24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/brandon_medium"
        android:text="@string/shipping"
        android:textColor="#737373"
        android:textSize="16sp"/>



</LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/shipped_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:tint="#737373"
            android:src="@drawable/ic_done_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/Shipped"
            android:textColor="#737373"
            android:textSize="16sp"/>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/canceled_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:tint="#737373"
            android:src="@drawable/ic_clear_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/canceled"
            android:textColor="#737373"
            android:textSize="16sp"/>



    </LinearLayout>


</LinearLayout>